--- a/templates/crear-usuario.html
+++ b/templates/crear-usuario.html
@@ -45,19 +45,20 @@
             <div class="card-header">
               <h3 class="card-title">Crear usuario</h3>
             </div>
-            <form>
+            <form action="" method="post">
+              {{ form.csrf_token }}
               <div class="card-body">
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label for="correoElectronico">Correo electrónico</label>
-                      <input type="email" class="form-control" id="correoElectronico" placeholder="">
+                      <label for="correo">Correo electrónico</label>
+                      {{ form.correo(class_="form-control")}}
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="password">Contraseña</label>
-                      <input type="password" class="form-control" id="password" placeholder="">
+                      {{ form.password(class_="form-control")}}
                     </div>
                   </div>
                 </div>
@@ -65,13 +66,13 @@
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="nombres">Nombres</label>
-                      <input type="text" class="form-control" id="nombres" placeholder="">
+                      {{ form.nombres(class_="form-control")}}
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="apellidos">Apellidos</label>
-                      <input type="text" class="form-control" id="apellidos" placeholder="">
+                      {{ form.apellidos(class_="form-control")}}
                     </div>
                   </div>
                 </div>
@@ -79,17 +80,13 @@
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="edad">Edad</label>
-                      <input type="number" class="form-control" id="edad" min="18" placeholder="">
+                      {{ form.edad(class_="form-control")}}
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="genero">Género</label>
-                      <select class="form-control" name="genero" id="genero">
-                        <option value="seleccionar">Seleccionar</option>
-                        <option value="masculino">Masculino</option>
-                        <option value="femenino">Femenino</option>
-                      </select>
+                      {{ form.genero(class_="form-control")}}
                     </div>
                   </div>
                 </div>
@@ -97,27 +94,27 @@
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="cargo">Cargo</label>
-                      <input type="text" class="form-control" id="cargo" placeholder="">
+                      {{ form.cargo(class_="form-control")}}
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="fechaIngreso">Fecha de ingreso</label>
-                      <input type="date" class="form-control" id="fechaIngreso" placeholder="">
+                      {{ form.fechaIngreso(class_="form-control")}}
                     </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label for="tipoContrato">Tipo de Contrato</label>
-                      <input type="text" class="form-control" id="tipoContrato" placeholder="">
+                      <label for="tipoContrato">Tipo de contrato</label>
+                      {{ form.tipoContrato(class_="form-control")}}
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="fechaTerminoContrato">Fecha término contrato</label>
-                      <input type="date" class="form-control" id="fechaTerminoContrato" placeholder="">
+                      {{ form.fechaTerminoContrato(class_="form-control")}}
                     </div>
                   </div>
                 </div>
@@ -125,13 +122,13 @@
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="dependencia">Dependencia</label>
-                      <input type="text" class="form-control" id="dependencia" placeholder="">
+                      {{ form.dependencia(class_="form-control")}}
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="salario">Salario</label>
-                      <input type="number" class="form-control" id="salario" min="0" placeholder="">
+                      {{ form.salario(class_="form-control")}}
                     </div>
                   </div>
                 </div>
@@ -139,12 +136,7 @@
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="rol">Rol</label>
-                      <select class="form-control" name="rol" id="rol">
-                        <option value="seleccionar">Seleccionar</option>
-                        <option value="usuarioFinal">Usuario final</option>
-                        <option value="administrador">Administrador</option>
-                        <option value="superAdministrador">SuperAdministrador</option>
-                      </select>
+                      {{ form.rol(class_="form-control")}}
                     </div>
                   </div>
                 </div>
