--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,7 +44,7 @@
             <li class="nav-header">Menú</li>
 
             <li class="nav-item">
-              <a href="../usuarios/crear-usuario.html" class="nav-link">
+              <a href="{{'/usuarios/crear'}}" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>
                   Crear usuario
@@ -62,7 +62,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="../usuarios/ver-listar-usuarios.html" class="nav-link">
+              <a href="{{'/usuarios/listar'}}" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>
                   Listar usuarios
