--- a/templates/layout.html
+++ b/templates/layout.html
@@ -53,7 +53,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="../usuarios/editar-usuario.html" class="nav-link">
+              <a href="{{'/usuarios/editar'}}" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>
                   Editar usuario
