view user details

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -71,7 +71,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="../usuarios/ver-usuario.html" class="nav-link">
+              <a href="{{'/usuarios/ver'}}" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>
                   Ver usuario
