--- a/templates/layout.html
+++ b/templates/layout.html
@@ -80,15 +80,6 @@
             </li>
 
             <li class="nav-item">
-              <a href="../usuarios/eliminar-usuario.html" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>
-                  Eliminar usuario
-                </p>
-              </a>
-            </li>
-
-            <li class="nav-item">
               <a href="../usuarios/generar-retroalimentacion-usuario.html" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>
@@ -107,7 +98,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="../login/login-v2.html" class="nav-link">
+              <a href="{{'/login'}}" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>
                   Iniciar sesión
