--- a/templates/ver-usuario.html
+++ b/templates/ver-usuario.html
@@ -142,7 +142,7 @@
               </div>
 
               <div class="card-footer">
-                <button type="submit" class="btn btn-primary">Volver</button>
+                <a class="btn btn-primary" href="{{'/usuarios/listar'}}">Volver</a>
               </div>
             </form>
           </div>
