--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,12 @@
 
 	{% endblock %}
 
+  <style>
+    .contenedor {
+      border: 1px solid transparent;
+    }
+  </style>
+
 </head>
 <body class="hold-transition sidebar-mini">
 
