--- a/templates/editar-usuario.html
+++ b/templates/editar-usuario.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block contentblock %}
-  <div class="content-wrapper">
+  <div class="content-wrapper contenedor">
     <section class="content-header">
       <div class="container-fluid">
         <div class="row mb-2">
