--- a/templates/layout.html
+++ b/templates/layout.html
@@ -86,7 +86,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="../usuarios/generar-retroalimentacion-usuario.html" class="nav-link">
+              <a href="{{'/usuarios/retroalimentacion'}}" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>
                   Crear retroalimentación
