--- a/templates/layout.html
+++ b/templates/layout.html
@@ -95,7 +95,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="../perfil/perfil-usuario.html" class="nav-link">
+              <a href="{{'/usuarios/perfil'}}" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>
                   Perfil de usuario
