get data for form

--- a/templates/generar-retroalimentacion-usuario.html
+++ b/templates/generar-retroalimentacion-usuario.html
@@ -95,7 +95,8 @@
               </div>
 
               <div class="card-footer">
-                <button type="submit" class="btn btn-primary">Guardar</button>
+                <button type="submit" class="btn btn-primary float-right">Guardar</button>
+                <a type="submit" class="btn btn-primary float-left" href="{{'/usuarios/listar'}}">Volver</a>
               </div>
             </form>
           </div>
