--- a/templates/crear-usuario.html
+++ b/templates/crear-usuario.html
@@ -143,7 +143,7 @@
               </div>
 
               <div class="card-footer">
-                <button type="submit" class="btn btn-primary">Guardar</button>
+                <button type="submit" class="btn btn-primary float-right">Guardar</button>
               </div>
             </form>
           </div>
