--- a/templates/editar-usuario.html
+++ b/templates/editar-usuario.html
@@ -142,7 +142,7 @@
               </div>
 
               <div class="card-footer">
-                <button type="submit" class="btn btn-primary">Guardar</button>
+                <button type="submit" class="btn btn-primary float-right">Guardar</button>
               </div>
             </form>
           </div>
