add dashboard link in menu

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -51,6 +51,15 @@
             <li class="nav-header">Menú</li>
 
             <li class="nav-item">
+              <a href="{{'/dashboard'}}" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>
+                  Dashbord
+                </p>
+              </a>
+            </li>
+
+            <li class="nav-item">
               <a href="{{'/usuarios/crear'}}" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>
