--- a/templates/layout.html
+++ b/templates/layout.html
@@ -54,7 +54,7 @@
               <a href="{{'/dashboard'}}" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>
-                  Dashbord
+                  Dashboard
                 </p>
               </a>
             </li>
