--- a/templates/layout.html
+++ b/templates/layout.html
@@ -69,7 +69,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="{{'/usuarios/editar'}}" class="nav-link">
+              <a href="{{'/usuarios/editar/183'}}" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>
                   Editar usuario
@@ -87,7 +87,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="{{'/usuarios/ver'}}" class="nav-link">
+              <a href="{{'/usuarios/ver/183'}}" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>
                   Ver usuario
@@ -96,7 +96,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="{{'/usuarios/retroalimentacion'}}" class="nav-link">
+              <a href="{{'/usuarios/retroalimentacion/183'}}" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>
                   Crear retroalimentación
