--- a/templates/ver-listar-usuarios.html
+++ b/templates/ver-listar-usuarios.html
@@ -75,13 +75,13 @@
                       <td>$1.500.000</td>
                       <td>
                         <div class="btn-group">
-                          <a class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Ver detalle" href="{{'/usuarios/ver'}}">
+                          <a class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Ver detalle" href="{{'/usuarios/ver/183'}}">
                             <i class="fas fa-eye"></i>
                           </a>
-                          <a class="btn btn-light" data-toggle="tooltip" data-placement="top" title="Generar retroalimentación" href="{{'/usuarios/retroalimentacion'}}"">
+                          <a class="btn btn-light" data-toggle="tooltip" data-placement="top" title="Generar retroalimentación" href="{{'/usuarios/retroalimentacion/183'}}"">
                             <i class="fas fa-comment-dots"></i>
                           </a>
-                          <a class="btn btn-warning" data-toggle="tooltip" data-placement="top" title="Editar" href="{{'/usuarios/editar'}}">
+                          <a class="btn btn-warning" data-toggle="tooltip" data-placement="top" title="Editar" href="{{'/usuarios/editar/183'}}">
                             <i class="fas fa-edit"></i>
                           </a>
                           <a class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar" onclick="return onClickEliminar();">
@@ -99,13 +99,13 @@
                         <td>$2.500.000</td>
                         <td>
                           <div class="btn-group">
-                            <a class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Ver detalle" href="{{'/usuarios/ver'}}">
+                            <a class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Ver detalle" href="{{'/usuarios/ver/183'}}">
                               <i class="fas fa-eye"></i>
                             </a>
-                            <a class="btn btn-light" data-toggle="tooltip" data-placement="top" title="Generar retroalimentación" href="{{'/usuarios/retroalimentacion'}}"">
+                            <a class="btn btn-light" data-toggle="tooltip" data-placement="top" title="Generar retroalimentación" href="{{'/usuarios/retroalimentacion/183'}}"">
                               <i class="fas fa-comment-dots"></i>
                             </a>
-                            <a class="btn btn-warning" data-toggle="tooltip" data-placement="top" title="Editar" href="{{'/usuarios/editar'}}">
+                            <a class="btn btn-warning" data-toggle="tooltip" data-placement="top" title="Editar" href="{{'/usuarios/editar/183'}}">
                               <i class="fas fa-edit"></i>
                             </a>
                             <a class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar" onclick="return onClickEliminar();">
@@ -123,13 +123,13 @@
                         <td>$3.500.000</td>
                         <td>
                           <div class="btn-group">
-                            <a class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Ver detalle" href="{{'/usuarios/ver'}}">
+                            <a class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Ver detalle" href="{{'/usuarios/ver/183'}}">
                               <i class="fas fa-eye"></i>
                             </a>
-                            <a class="btn btn-light" data-toggle="tooltip" data-placement="top" title="Generar retroalimentación" href="{{'/usuarios/retroalimentacion'}}"">
+                            <a class="btn btn-light" data-toggle="tooltip" data-placement="top" title="Generar retroalimentación" href="{{'/usuarios/retroalimentacion/183'}}"">
                               <i class="fas fa-comment-dots"></i>
                             </a>
-                            <a class="btn btn-warning" data-toggle="tooltip" data-placement="top" title="Editar" href="{{'/usuarios/editar'}}">
+                            <a class="btn btn-warning" data-toggle="tooltip" data-placement="top" title="Editar" href="{{'/usuarios/editar/183'}}">
                               <i class="fas fa-edit"></i>
                             </a>
                             <a class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar" onclick="return onClickEliminar();">
@@ -147,13 +147,13 @@
                         <td>$500.000</td>
                         <td>
                           <div class="btn-group">
-                            <a class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Ver detalle" href="{{'/usuarios/ver'}}">
+                            <a class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Ver detalle" href="{{'/usuarios/ver/183'}}">
                               <i class="fas fa-eye"></i>
                             </a>
-                            <a class="btn btn-light" data-toggle="tooltip" data-placement="top" title="Generar retroalimentación" href="{{'/usuarios/retroalimentacion'}}"">
+                            <a class="btn btn-light" data-toggle="tooltip" data-placement="top" title="Generar retroalimentación" href="{{'/usuarios/retroalimentacion/183'}}"">
                               <i class="fas fa-comment-dots"></i>
                             </a>
-                            <a class="btn btn-warning" data-toggle="tooltip" data-placement="top" title="Editar" href="{{'/usuarios/editar'}}">
+                            <a class="btn btn-warning" data-toggle="tooltip" data-placement="top" title="Editar" href="{{'/usuarios/editar/183'}}">
                               <i class="fas fa-edit"></i>
                             </a>
                             <a class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar" onclick="return onClickEliminar();">
