--- a/templates/ver-listar-usuarios.html
+++ b/templates/ver-listar-usuarios.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" href="{{url_for('static', filename='plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css')}}">
   <!-- Toastr -->
   <link rel="stylesheet" href="{{url_for('static', filename='plugins/toastr/toastr.min.css')}}">
+  <!-- DataTables -->
+  <link rel="stylesheet" href="{{url_for('static', filename='plugins/datatables-bs4/css/dataTables.bootstrap4.min.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='plugins/datatables-responsive/css/responsive.bootstrap4.min.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='plugins/datatables-buttons/css/buttons.bootstrap4.min.css')}}">
   <!-- Theme style -->
   <link rel="stylesheet" href="{{url_for('static', filename='dist/css/adminlte.min.css')}}">
 {% endblock %}
@@ -37,7 +41,7 @@
         <div class="row">
           <div class="col-12">
             <div class="card">
-              <div class="card-header">
+              <!-- <div class="card-header">
                 <h3 class="card-title"></h3>
 
                 <div class="card-tools">
@@ -51,9 +55,9 @@
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="card-body table-responsive p-0">
-                <table class="table table-hover text-nowrap">
+              </div> -->
+              <div class="card-body table-responsive">
+                <table class="table table-hover text-nowrap" id="tabla">
                   <thead>
                     <tr class="text-center">
                       <th>ID</th>
@@ -182,6 +186,19 @@
   <script src="{{url_for('static', filename='plugins/sweetalert2/sweetalert2.min.js')}}"></script>
   <!-- Toastr -->
   <script src="{{url_for('static', filename='plugins/toastr/toastr.min.js')}}"></script>
+  <!-- DataTables  & Plugins -->
+  <script src="{{url_for('static', filename='plugins/datatables/jquery.dataTables.min.js')}}"></script>
+  <script src="{{url_for('static', filename='plugins/datatables-bs4/js/dataTables.bootstrap4.min.js')}}"></script>
+  <script src="{{url_for('static', filename='plugins/datatables-responsive/js/dataTables.responsive.min.js')}}"></script>
+  <script src="{{url_for('static', filename='plugins/datatables-responsive/js/responsive.bootstrap4.min.js')}}"></script>
+  <script src="{{url_for('static', filename='plugins/datatables-buttons/js/dataTables.buttons.min.js')}}"></script>
+  <script src="{{url_for('static', filename='plugins/datatables-buttons/js/buttons.bootstrap4.min.js')}}"></script>
+  <script src="{{url_for('static', filename='plugins/jszip/jszip.min.js')}}"></script>
+  <script src="{{url_for('static', filename='plugins/pdfmake/pdfmake.min.js')}}"></script>
+  <script src="{{url_for('static', filename='plugins/pdfmake/vfs_fonts.js')}}"></script>
+  <script src="{{url_for('static', filename='plugins/datatables-buttons/js/buttons.html5.min.js')}}"></script>
+  <script src="{{url_for('static', filename='plugins/datatables-buttons/js/buttons.print.min.js')}}"></script>
+  <script src="{{url_for('static', filename='plugins/datatables-buttons/js/buttons.colVis.min.js')}}"></script>
   <!-- AdminLTE App -->
   <script src="{{url_for('static', filename='dist/js/adminlte.min.js')}}"></script>
   <!-- AdminLTE for demo purposes -->
@@ -212,6 +229,24 @@
     $(function () {
       $('[data-toggle="tooltip"]').tooltip()
     })
+
+    $(function () {
+    $('#tabla').DataTable({
+      "paging": true,
+      "lengthChange": true,
+      "searching": true,
+      "ordering": true,
+      "info": true,
+      "autoWidth": false,
+      "responsive": true,
+      "language": {
+        "url": "https://cdn.datatables.net/plug-ins/1.11.3/i18n/es_es.json"
+      },
+      "columnDefs": [
+        { "orderable": false, "targets": 6 }
+      ]
+    });
+  });
 
   </script>
 
