--- a/templates/ver-listar-usuarios.html
+++ b/templates/ver-listar-usuarios.html
@@ -69,104 +69,6 @@
                       <th>Acción</th>
                     </tr>
                   </thead>
-                  <tbody>
-                    <tr class="text-center">
-                      <td>183</td>
-                      <td>johndoe@mail.com</td>
-                      <td>John</td>
-                      <td>Doe</td>
-                      <td>Gerente</td>
-                      <td>$1.500.000</td>
-                      <td>
-                        <div class="btn-group">
-                          <a class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Ver detalle" href="{{'/usuarios/ver/183'}}">
-                            <i class="fas fa-eye"></i>
-                          </a>
-                          <a class="btn btn-light" data-toggle="tooltip" data-placement="top" title="Generar retroalimentación" href="{{'/usuarios/retroalimentacion/183'}}"">
-                            <i class="fas fa-comment-dots"></i>
-                          </a>
-                          <a class="btn btn-warning" data-toggle="tooltip" data-placement="top" title="Editar" href="{{'/usuarios/editar/183'}}">
-                            <i class="fas fa-edit"></i>
-                          </a>
-                          <a class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar" onclick="return onClickEliminar();">
-                            <i class="fas fa-trash"></i>
-                          </a>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr class="text-center">
-                        <td>185</td>
-                        <td>mariajerez@mail.com</td>
-                        <td>María</td>
-                        <td>Jeréz</td>
-                        <td>Desarrollador</td>
-                        <td>$2.500.000</td>
-                        <td>
-                          <div class="btn-group">
-                            <a class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Ver detalle" href="{{'/usuarios/ver/183'}}">
-                              <i class="fas fa-eye"></i>
-                            </a>
-                            <a class="btn btn-light" data-toggle="tooltip" data-placement="top" title="Generar retroalimentación" href="{{'/usuarios/retroalimentacion/183'}}"">
-                              <i class="fas fa-comment-dots"></i>
-                            </a>
-                            <a class="btn btn-warning" data-toggle="tooltip" data-placement="top" title="Editar" href="{{'/usuarios/editar/183'}}">
-                              <i class="fas fa-edit"></i>
-                            </a>
-                            <a class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar" onclick="return onClickEliminar();">
-                              <i class="fas fa-trash"></i>
-                            </a>
-                          </div>
-                        </td>
-                    </tr>
-                    <tr class="text-center">
-                        <td>196</td>
-                        <td>alaciavelasquez@mail.com</td>
-                        <td>Alicia</td>
-                        <td>Velásquez</td>
-                        <td>Administrador</td>
-                        <td>$3.500.000</td>
-                        <td>
-                          <div class="btn-group">
-                            <a class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Ver detalle" href="{{'/usuarios/ver/183'}}">
-                              <i class="fas fa-eye"></i>
-                            </a>
-                            <a class="btn btn-light" data-toggle="tooltip" data-placement="top" title="Generar retroalimentación" href="{{'/usuarios/retroalimentacion/183'}}"">
-                              <i class="fas fa-comment-dots"></i>
-                            </a>
-                            <a class="btn btn-warning" data-toggle="tooltip" data-placement="top" title="Editar" href="{{'/usuarios/editar/183'}}">
-                              <i class="fas fa-edit"></i>
-                            </a>
-                            <a class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar" onclick="return onClickEliminar();">
-                              <i class="fas fa-trash"></i>
-                            </a>
-                          </div>
-                        </td>
-                    </tr>
-                    <tr class="text-center">
-                        <td>200</td>
-                        <td>carlosvaca@mail.com</td>
-                        <td>Carlos</td>
-                        <td>Vaca</td>
-                        <td>Escritor</td>
-                        <td>$500.000</td>
-                        <td>
-                          <div class="btn-group">
-                            <a class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Ver detalle" href="{{'/usuarios/ver/183'}}">
-                              <i class="fas fa-eye"></i>
-                            </a>
-                            <a class="btn btn-light" data-toggle="tooltip" data-placement="top" title="Generar retroalimentación" href="{{'/usuarios/retroalimentacion/183'}}"">
-                              <i class="fas fa-comment-dots"></i>
-                            </a>
-                            <a class="btn btn-warning" data-toggle="tooltip" data-placement="top" title="Editar" href="{{'/usuarios/editar/183'}}">
-                              <i class="fas fa-edit"></i>
-                            </a>
-                            <a class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar" onclick="return onClickEliminar();">
-                              <i class="fas fa-trash"></i>
-                            </a>
-                          </div>
-                        </td>
-                    </tr>
-                  </tbody>
                 </table>
               </div>
             </div>
@@ -205,9 +107,9 @@
   <script src="{{url_for('static', filename='dist/js/demo.js')}}"></script>
 
   <script type="text/javascript">
-    function onClickEliminar () {
+    function onClickEliminar (id) {
       Swal.fire({
-        title: '¿Desea eliminar este usuario?',
+        title: '¿Desea eliminar este usuario? ' + id,
         text: "Esta acción no se puede deshacer",
         icon: 'warning',
         confirmButtonColor: '#d33',
@@ -243,7 +145,41 @@
         "url": "https://cdn.datatables.net/plug-ins/1.11.3/i18n/es_es.json"
       },
       "columnDefs": [
-        { "orderable": false, "targets": 6 }
+        { "orderable": false, "targets": 6 },
+      ],
+      "ajax": {
+        "url": "/listar-usuarios-dummy",
+        "type": "GET",
+        "dataType": "json",
+        "dataSrc": ""
+      },
+      "columns": [
+        { "data": "ID" },
+        { "data": "Correo" },
+        { "data": "Nombres" },
+        { "data": "Apellidos" },
+        { "data": "Cargo" },
+        { "data": "Salario" },
+        {
+          "data": "ID",
+          render: function(id, type) {
+            return `
+              <div class="btn-group">
+                <a class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Ver detalle" href="{{'/usuarios/ver/${id}'}}">
+                  <i class="fas fa-eye"></i>
+                </a>
+                <a class="btn btn-light" data-toggle="tooltip" data-placement="top" title="Generar retroalimentación" href="{{'/usuarios/retroalimentacion/${id}'}}"">
+                  <i class="fas fa-comment-dots"></i>
+                </a>
+                <a class="btn btn-warning" data-toggle="tooltip" data-placement="top" title="Editar" href="{{'/usuarios/editar/${id}'}}">
+                  <i class="fas fa-edit"></i>
+                </a>
+                <a class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar" onclick="return onClickEliminar(${id});">
+                  <i class="fas fa-trash"></i>
+                </a>
+              </div>`;
+          }
+        }
       ]
     });
   });
