add links in layout

--- a/templates/tiposcontratos/tiposcontratos-editar.html
+++ b/templates/tiposcontratos/tiposcontratos-editar.html
@@ -60,7 +60,7 @@
 
               <div class="card-footer">
                 <button type="submit" class="btn btn-primary float-right">Guardar</button>
-                <a class="btn btn-primary" href="{{'/cargos/listar'}}">Volver</a>
+                <a class="btn btn-primary" href="{{'/tiposcontratos/listar'}}">Volver</a>
               </div>
             </form>
           </div>
