--- a/templates/layout.html
+++ b/templates/layout.html
@@ -122,6 +122,42 @@
               </a>
             </li>
 
+            <li class="nav-item">
+              <a href="{{'/cargos'}}" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>
+                  Cargos
+                </p>
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <a href="{{'/dependencias'}}" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>
+                  Dependencias
+                </p>
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <a href="{{'/generos'}}" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>
+                  Géneros
+                </p>
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <a href="{{'/tiposcontratos'}}" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>
+                  Tipos de contratos
+                </p>
+              </a>
+            </li>
+
           </ul>
         </nav>
       </div>
