--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -54,39 +54,39 @@
           <div class="col-lg-3 col-6">
             <div class="small-box bg-info">
               <div class="inner">
-                <h3>150</h3>
+                <h3>{{ cantidad }}</h3>
                 <p>Usuarios en total</p>
               </div>
               <div class="icon">
                 <i class="ion ion-person-add"></i>
               </div>
-              <a href="#" class="small-box-footer">Ver más <i class="fas fa-arrow-circle-right"></i></a>
+              <a  href="{{'/usuarios/listar'}}" class="small-box-footer">Ver más <i class="fas fa-arrow-circle-right"></i></a>
             </div>
           </div>
 
           <div class="col-lg-3 col-6">
             <div class="small-box bg-success">
               <div class="inner">
-                <h3>80<sup style="font-size: 20px"></sup></h3>
+                <h3>{{ maxPuntaje }}<sup style="font-size: 20px"></sup></h3>
                 <p>El mayor puntaje</p>
               </div>
               <div class="icon">
                 <i class="ion ion-stats-bars"></i>
               </div>
-              <a href="#" class="small-box-footer">Ver más <i class="fas fa-arrow-circle-right"></i></a>
+              <a  href="{{'/usuarios/listar'}}" class="small-box-footer">Ver más <i class="fas fa-arrow-circle-right"></i></a>
             </div>
           </div>
 
           <div class="col-lg-3 col-6">
             <div class="small-box bg-warning">
               <div class="inner">
-                <h3>44</h3>
+                <h3>{{ minPuntaje }}</h3>
                 <p>El menor puntaje</p>
               </div>
               <div class="icon">
                 <i class="ion ion-stats-bars"></i>
               </div>
-              <a href="#" class="small-box-footer">Ver más <i class="fas fa-arrow-circle-right"></i></a>
+              <a  href="{{'/usuarios/listar'}}" class="small-box-footer">Ver más <i class="fas fa-arrow-circle-right"></i></a>
             </div>
           </div>
 
