--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,11 @@
     .contenedor {
       border: 1px solid transparent;
     }
+
+    .rol-usuario {
+      color: #e3e4e7;
+      font-size: 14px;
+    }
   </style>
 
 </head>
@@ -41,124 +46,15 @@
             <img src="{{url_for('static', filename='dist/img/user2-160x160.jpg')}}" class="img-circle elevation-2" alt="User Image">
           </div>
           <div class="info">
-            <a href="#" class="d-block">John Doe</a>
+            {% if 'id' in session %}
+              <a href="#" class="d-block">{{session['nombres']}} {{session['apellidos']}}</a>
+              <span class="rol-usuario">{{session['rol']}}</span>
+            {% endif %}
           </div>
         </div>
 
         <nav class="mt-2">
-          <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-
-            <li class="nav-header">Menú</li>
-
-            <li class="nav-item">
-              <a href="{{'/dashboard'}}" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>
-                  Dashboard
-                </p>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a href="{{'/usuarios/crear'}}" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>
-                  Crear usuario
-                </p>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a href="{{'/usuarios/editar/183'}}" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>
-                  Editar usuario
-                </p>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a href="{{'/usuarios/listar'}}" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>
-                  Listar usuarios
-                </p>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a href="{{'/usuarios/ver/183'}}" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>
-                  Ver usuario
-                </p>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a href="{{'/usuarios/retroalimentacion/183'}}" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>
-                  Crear retroalimentación
-                </p>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a href="{{'/usuarios/perfil'}}" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>
-                  Perfil de usuario
-                </p>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a href="{{'/login'}}" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>
-                  Iniciar sesión
-                </p>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a href="{{'/cargos'}}" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>
-                  Cargos
-                </p>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a href="{{'/dependencias'}}" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>
-                  Dependencias
-                </p>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a href="{{'/generos'}}" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>
-                  Géneros
-                </p>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a href="{{'/tiposcontratos'}}" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>
-                  Tipos de contratos
-                </p>
-              </a>
-            </li>
-
-          </ul>
+          <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false" id="lista-opciones"></ul>
         </nav>
       </div>
     </aside>
@@ -169,7 +65,7 @@
 
 		<footer class="main-footer">
       <div class="float-right d-none d-sm-block">
-        <b>Version</b> 1.0.0
+        <strong>Version</strong> 1.0.0
       </div>
       <strong>Copyright &copy; 2021 <a href="#">Búfalo</a>.</strong>
     </footer>
@@ -181,6 +77,36 @@
 	{% block scriptsblock %}
 
 	{% endblock %}
+
+  <script>
+    $(document).ready(function() {
+      $.ajax({
+        url: '/menu',
+        type: 'GET',
+        data: { },
+        success: function(response) {
+          const datos = response;
+          let lista = '<li class="nav-header">Menú</li>';
+          datos.forEach(item => {
+            if (item.mostrarMenu == 1) {
+              lista += `<li class="nav-item">
+                <a href="${item.url}" class="nav-link">
+                  ${item.icono}
+                  <p>
+                    ${item.descripcion}
+                  </p>
+                </a>
+              </li>`
+            }
+          });
+          $('#lista-opciones').html(lista);
+        },
+        error: function(error) {
+          console.log('Ha ocurrido un error, intenta nuevamente.');
+        },
+      });
+    });
+  </script>
 
 </body>
 </html>
