--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="{{url_for('static', filename='plugins/fontawesome-free/css/all.min.css')}}">
   <!-- icheck bootstrap -->
   <link rel="stylesheet" href="{{url_for('static', filename='plugins/icheck-bootstrap/icheck-bootstrap.min.css')}}">
+  <!-- SweetAlert2 -->
+  <link rel="stylesheet" href="{{url_for('static', filename='plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css')}}">
+  <!-- Toastr -->
+  <link rel="stylesheet" href="{{url_for('static', filename='plugins/toastr/toastr.min.css')}}">
   <!-- Theme style -->
   <link rel="stylesheet" href="{{url_for('static', filename='dist/css/adminlte.min.css')}}">
 
@@ -57,7 +61,36 @@
   <script src="{{url_for('static', filename='plugins/jquery/jquery.min.js')}}"></script>
   <!-- Bootstrap 4 -->
   <script src="{{url_for('static', filename='plugins/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
+  <!-- SweetAlert2 -->
+  <script src="{{url_for('static', filename='plugins/sweetalert2/sweetalert2.min.js')}}"></script>
+  <!-- Toastr -->
+  <script src="{{url_for('static', filename='plugins/toastr/toastr.min.js')}}"></script>
   <!-- AdminLTE App -->
   <script src="{{url_for('static', filename='dist/js/adminlte.min.js')}}"></script>
+
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      {% for message in messages %}
+        <script type="text/javascript">
+          const Toast = Swal.mixin({
+            toast: true,
+            position: 'center',
+            showConfirmButton: true,
+            timer: 3000
+          });
+
+          let mensajeMostrar = '';
+          mensajeMostrar = '{{ message | safe }}'
+          if (mensajeMostrar) {
+            Toast.fire({
+              icon: 'error',
+              title: mensajeMostrar
+            })
+          }
+        </script>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
+
 </body>
 </html>
