--- a/templates/usuarios/crear-usuario.html
+++ b/templates/usuarios/crear-usuario.html
@@ -43,7 +43,7 @@
 
           <div class="card card-primary">
             <div class="card-header">
-              <h3 class="card-title">Editar usuario</h3>
+              <h3 class="card-title">Crear usuario</h3>
             </div>
             <form action="" method="post">
               {{ form.csrf_token }}
@@ -51,14 +51,14 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label for="id">ID</label>
-                      {{ form.id(class_="form-control") }}
+                      <label for="correo">Correo electrónico</label>
+                      {{ form.correo(class_="form-control") }}
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label for="correoElectronico">Correo electrónico</label>
-                      {{ form.correo(class_="form-control") }}
+                      <label for="password">Contraseña</label>
+                      {{ form.password(class_="form-control") }}
                     </div>
                   </div>
                 </div>
@@ -107,7 +107,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label for="tipoContrato">Tipo de Contrato</label>
+                      <label for="tipoContrato">Tipo de contrato</label>
                       {{ form.tipoContrato(class_="form-control") }}
                     </div>
                   </div>
@@ -144,7 +144,7 @@
 
               <div class="card-footer">
                 <button type="submit" class="btn btn-primary float-right">Guardar</button>
-                <a class="btn btn-primary" href="{{'/usuarios/listar'}}">Volver</a>
+                <a class="btn btn-primary float-left" href="{{'/usuarios/listar'}}">Volver</a>
               </div>
             </form>
           </div>
