--- a/templates/usuarios/editar-usuario.html
+++ b/templates/usuarios/editar-usuario.html
@@ -43,7 +43,7 @@
 
           <div class="card card-primary">
             <div class="card-header">
-              <h3 class="card-title">Crear usuario</h3>
+              <h3 class="card-title">Editar usuario</h3>
             </div>
             <form action="" method="post">
               {{ form.csrf_token }}
@@ -51,14 +51,14 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label for="correo">Correo electrónico</label>
-                      {{ form.correo(class_="form-control") }}
+                      <label for="id">ID</label>
+                      {{ form.id(class_="form-control") }}
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label for="password">Contraseña</label>
-                      {{ form.password(class_="form-control") }}
+                      <label for="correoElectronico">Correo electrónico</label>
+                      {{ form.correo(class_="form-control") }}
                     </div>
                   </div>
                 </div>
@@ -107,7 +107,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label for="tipoContrato">Tipo de contrato</label>
+                      <label for="tipoContrato">Tipo de Contrato</label>
                       {{ form.tipoContrato(class_="form-control") }}
                     </div>
                   </div>
@@ -144,6 +144,7 @@
 
               <div class="card-footer">
                 <button type="submit" class="btn btn-primary float-right">Guardar</button>
+                <a class="btn btn-primary" href="{{'/usuarios/listar'}}">Volver</a>
               </div>
             </form>
           </div>
@@ -164,4 +165,16 @@
   <script src="{{url_for('static', filename='dist/js/adminlte.min.js')}}"></script>
   <!-- AdminLTE for demo purposes -->
   <script src="{{url_for('static', filename='dist/js/demo.js')}}"></script>
+
+  <script>
+    document.querySelector('#salario').addEventListener('keypress', function (e) {
+      const allowedChars = '0123456789';
+      function contains(stringValue, charValue) {
+        return stringValue.indexOf(charValue) > -1;
+      }
+      var invalidKey = e.key.length === 1 && !contains(allowedChars, e.key) || e.key === '.' && contains(e.target.value, '.');
+      invalidKey && e.preventDefault();
+    });
+  </script>
+
 {% endblock %}
