change icon of application

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -26,7 +26,7 @@
 {% block contentblock %}
   <!-- Preloader -->
   <div class="preloader flex-column justify-content-center align-items-center">
-    <img class="animation__shake" src="{{url_for('static', filename='dist/img/AdminLTELogo.png')}}" alt="AdminLTELogo" height="60" width="60">
+    <img class="animation__shake" src="{{url_for('static', filename='dist/img/AdminLTELogo.png')}}" alt="Búfalo Logo" height="60" width="60">
   </div>
 
   <div class="content-wrapper contenedor">
