--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,7 +36,7 @@
 
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
       <a href="#" class="brand-link">
-        <img src="{{url_for('static', filename='dist/img/AdminLTELogo.png')}}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+        <img src="{{url_for('static', filename='dist/img/AdminLTELogo.png')}}" alt="Búfalo Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
         <span class="brand-text font-weight-light">Búfalo</span>
       </a>
 
