--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -36,7 +36,10 @@
   <div class="login-box login-shadow">
     <div class="card card-outline card-primary">
       <div class="card-header text-center">
-        <a href="#" class="h1"><b>Búfalo</b>
+        <div>
+          <img src="{{url_for('static', filename='dist/img/AdminLTELogo.png')}}" alt="Búfalo Logo" class="brand-image img-circle" height="50px">
+        </div>
+        <a href="#" class="h1"><strong>Búfalo</strong>
         </a>
         <p class="h2">Gestión de empleados</p>
       </div>
